# Telegram-iOS

./: .gitignore  .gitmodules  BUILD.bazel  BUILD.md  CERTIFICATE.md  Makefile  Package.resolved  Package.swift  Podfile  WORKSPACE  bazel-tg-ios-ryan  build.sh  changelog.md  copy.sh  make.json  upload_sentry.sh  versions.json
BCSymbolMaps/: A25A531E-73AA-39F2-AC7C-D57DB94BBB49.bcsymbolmap  EABBD644-F511-3CF9-8989-2C247949A3D8.bcsymbolmap
CloudVeil/SecurityManager/: BUILD.bazel
CloudVeil/SecurityManager/Sources/Classes/Controllers/: CloudVeilSecurityController.swift  CloudVeilUriFilter.swift  TGUserController.swift
CloudVeil/SecurityManager/Sources/Classes/Extensions/: NSError+Ext.swift  String+Ext.swift  SyncArray.swift
CloudVeil/SecurityManager/Sources/Classes/Helpers/: ObjMerge.swift
CloudVeil/SecurityManager/Sources/Classes/Managers/Server/: SecurityManager.swift
CloudVeil/SecurityManager/Sources/Classes/Models/: TGRow.swift  TGSettingsRequest.swift  TGSettingsResponse.swift  TGUserModel.swift
CloudVeil/UI/: BUILD.bazel
CloudVeil/UI/Resources/: cloudveil-eula.rtf
CloudVeil/UI/Resources/Icons.xcassets/CVM-Icon.imageset/: Contents.json
CloudVeil/UI/Sources/: DeleteAccount.swift  MyTextField.swift  TermsOfService.swift  UIKitWrappers.swift
Config/: configs.bzl  utils.bzl
ModernProto/ModernProto.xcodeproj/: project.pbxproj
NotificationContent/: Info.plist  NotificationViewController.swift
NotificationService/: ImageData.swift  Info.plist  NotificationService.m  NotificationService.swift
SecurityManager/: Debouncer.swift
SecurityManager.xcodeproj/: project.pbxproj
Share/: Info.plist  Share-AppStore.entitlements  Share-HockeyApp.entitlements  ShareDebugAppStoreLLC.entitlements
SiriIntents/: Info.plist
Sources/CloudVeilSecurityManager/: Info.plist
SwiftSupport/iphoneos/: libswiftAVFoundation.dylib  libswiftAccelerate.dylib  libswiftCallKit.dylib  libswiftCloudKit.dylib  libswiftContacts.dylib  libswiftCoreAudio.dylib  libswiftCoreData.dylib  (+23 more)
Telegram/: BUILD
Telegram-iOS/: AppDelegate.swift  Application.swift  ApplicationContext.swift  BuildConfig.m  Config-AppStore.xcconfig  Config-Hockeyapp-Internal.xcconfig  Info.plist  LegacyPreferencesImport.swift  SharedWakeupManager.swift  Telegram-iOS-AppStore.entitlements  Telegram-iOS-AppStoreLLC.entitlements  Telegram-iOS-Hockeyapp.entitlements
Telegram-iOS.xcodeproj/: project.pbxproj
Telegram-iOS.xcworkspace/: contents.xcworkspacedata
Widget/: Info.plist  PeerNode.swift
build-system/: template_minimal_development_configuration.json
(+601 files in other folders)
