load("@bazel_skylib//rules:common_settings.bzl",
    "bool_flag",
)

load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")

load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

bool_flag(
    name = "FakeMode",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "FakeModeSetting",
    flag_values = {
        ":FakeMode": "True",
    }
)

swift_library(
    name = "CloudVeilSecurityManager",
    module_name = "CloudVeilSecurityManager",
    srcs = glob(["Sources/**/*.swift"]),
    visibility = ["//visibility:public"],
    copts = select({
        ":FakeModeSetting": ["-DFAKE_MODE"],
        "//conditions:default": [],
    }),
    deps = [    
        "@ObjectMapper//:ObjectMapper",
    ],
)
