load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "UI",
    module_name = "CVUI",
    srcs = glob(["Sources/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        "//submodules/AsyncDisplayKit",
        "//submodules/Display",
        "//submodules/TelegramPresentationData",
    ],
)

filegroup(
    name = "Resources",
    srcs = glob(["Resources/**/*"], exclude = ["Resources/**/.*"]),
    visibility = ["//visibility:public"],
)
